--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body
 #main
 {
 margin: 0 auto;
-width: 998px;
+max-width: 998px;
 background: #ADE8FC;
 border: 15px solid #ADE8FC;
 margin-bottom: 30px
@@ -46,10 +46,10 @@ margin-bottom: 30px
 
 #header
 {
-width: 998px;
+max-width: 998px;
 margin: 0 auto;
-height: 327px;
-background: url(images/header.jpg) no-repeat center bottom;
+
+
 }
 
 #logo
@@ -78,14 +78,14 @@ font-size: 10px;
 
 #buttons
 {
-	width: 998px;
+	max-width: 998px;
 	height: 62px;
 	margin: 0 auto;
 	background: url(images/menu.gif) repeat-x;
 }
 
 #buttons ul {
-    padding-left: 80px;
+    
     margin: 0px;      
 }
 
@@ -96,8 +96,7 @@ font-size: 10px;
 #buttons a {
 	display: block;
 	float: left;
-	width: 115px;
-	height: 40px;
+	
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
@@ -108,41 +107,36 @@ font-size: 10px;
 }
 
 #buttons a:hover {
-	width: 115px;
-    height: 40px;
+
 	background: url(images/menu_hover.gif) repeat-x;
 }
 
-#content
-{
-width: 768px;
-padding: 5px;
-}
 
 #content_bg{
 	background: #FFFFFF;
 	padding: 5px;
 }
 .container {
-	width:990px; 
+	max-width:990px; 
 	margin:0 auto;
 	font-size: 12px;
 }
-.row-1 .meta1 {width:636px; margin-right:11px;}
-.row-1 .meta2 {width:297px; }
-.row-1 .meta1 .meta1 {width:254px; margin-right:43px;}
-.row-1 .meta1 .meta2 {width:245px;}
-.row-2 .meta1 {width:606px; margin-right:11px;}
-.row-2 .meta2 {width:297px;}
+.row-1 .meta1 {max-width:636px; margin-right:11px;}
+.row-1 .meta2 {max-width:297px; }
+.row-1 .meta1 .meta1 {max-width:254px; margin-right:43px;}
+.row-1 .meta1 .meta2 {max-width:245px;}
+.row-2 .meta1 {max-width:606px; margin-right:11px;}
+.row-2 .meta2 {max-width:297px;}
 
 .box {
 	background:#fff;
 	width:100%;
 }
 
-	.box .inside { 
-		padding:21px 20px 48px 20px;
-	}
+.box .inside { 
+	padding:21px 20px 48px 20px;
+}
+	
 	
 .outdent {
 	padding-bottom:36px;
@@ -158,36 +152,29 @@ padding: 5px;
 }
 
 .box1 {
+	max-width: 700px;
 	background:#D1F6FD;
 	border:1px solid #c6c9cc;
 	padding: 15px 12px 14px 13px;
-	 min-height: 285px;
+	min-height: 285px;
 }
 .box1.bg1 {
 	background:#BCF5FF;
 	padding-bottom:19px;
 }
-	.box1 h2, .indent H2, #column1 H2, #column2 H2, #column3 H2 {
-		padding: 0px;
-		padding-bottom: 10px;
-		color: #00D8FF;
-		font-size: 22px;
-		font-weight: normal;
-	}
+
+.box1 h2, .indent H2, #column1 H2, #column2 H2, #column3 H2 {
+	padding: 0px;
+	padding-bottom: 10px;
+	color: #00D8FF;
+	font-size: 22px;
+	font-weight: normal;
+}	
 
 #column1, #column2, #column3{
 	float: left;
-	width: 250px;
-	height: 119px;
+
 	padding: 20px 45px 10px 20px;
-}
-
-#column1, #column2{
-	background: url(images/st_center.jpg) no-repeat top right;
-}
-
-#column3{
-	background: url(images/st_right.jpg) no-repeat top right;
 }
 
 #column_box{
@@ -206,11 +193,12 @@ padding: 5px;
 	padding-bottom:27px;
 
 }
-	.img-box img { 
-		float:left; 
-		margin:0 20px 0 0;
-		border: 1px solid #666666
-	}
+
+.img-box img { 
+	float:left; 
+	margin:0 20px 0 0;
+	border: 1px solid #666666
+}	
 	
 .img-indent { 
 	margin:0 20px 0 0; 
@@ -218,27 +206,28 @@ padding: 5px;
 	border: 1px solid #666666
 }
 	
+.list1 li {
+	font-size:10px;
+	color:#000;
+	text-transform:uppercase;	
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+	padding-bottom: 5px;
+	margin-left: -20px
+}	
 	
-	.list1 li {
-		font-size:10px;
-		color:#000;
-		text-transform:uppercase;	
-		list-style: none;
-		margin: 0px;
-		padding: 0px;
-		padding-bottom: 5px;
-		margin-left: -20px
-	}
-		.list1 li a {
-			color:#000;
-			padding:0 0 0 4px;
-		}
-		.list1 li a.link1 {
-			font-size:12px;
-			color:#00D8FF;
-			text-transform:none;
+.list1 li a {
+	color:#000;
+	padding:0 0 0 4px;
+}		
 
-		}
+.list1 li a.link1 {
+	font-size:12px;
+	color:#00D8FF;
+	text-transform:none;
+
+}		
 		
 .indent {
 	padding:0 0 0 25px;
